# aubio-beatcheck

./: .gitignore  CONTRIBUTING.md  LICENSE  MIGRATION.md  QUICKSTART.md  README.md  main.py  pyproject.toml  warnings.txt
.agent/rules/: py-test-rules.md
.github/workflows/: benchmark.yml  ci.yml  publish.yml
aubio_beatcheck/: __init__.py  cli.py  presets.py
aubio_beatcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aubio_beatcheck/core/: __init__.py  adaptive_tuner.py  analyzer_factory.py  analyzers.py  benchmark_db.py  comparison.py  evaluation.py  feedback_loop.py  grid_search.py  ground_truth.py  multi_objective.py  signals.py  thebeat_gen.py
aubio_beatcheck/suites/: __init__.py  edge_cases.py  standard.py
aubio_beatcheck/ui/: __init__.py  app.py
aubio_beatcheck/ui/screens/: __init__.py  analysis.py  results.py  suite_selector.py
aubio_beatcheck/ui/widgets/: __init__.py
docs/: AGENT_INSTRUCTIONS.md  API.md
tests/: conftest.py  test_api.py  test_cli.py
web/: package-lock.json  package.json
web/src/: App.css  App.jsx
web/src/components/: AnalysisProgress.jsx  ResultsView.jsx  SuiteSelector.jsx
web_api/: main.py  models.py  plotting.py  routers.py
