[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aubio-beatcheck"
version = "0.1.0"
description = "A comprehensive validation and benchmarking tool for aubio audio analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Shaun Eccles-Smith", email = "shaun@ledfx.app"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]
keywords = ["aubio", "audio", "analysis", "beat", "tempo", "onset", "pitch", "validation", "benchmark"]

dependencies = [
    "aubio-ledfx>=0.4.11",
    "thebeat[music-notation]>=0.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.0.0",
    "loguru>=0.7.0",
    "litestar>=2.0.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "sniffio>=1.3.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/shauneccles/aubio-beatcheck"
Repository = "https://github.com/shauneccles/aubio-beatcheck"
Issues = "https://github.com/shauneccles/aubio-beatcheck/issues"

[project.scripts]
aubio-beatcheck = "aubio_beatcheck.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aubio_beatcheck*", "web_api*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E402",   # Module level import not at top of file
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # Treat warnings as errors for our own code
    "error::DeprecationWarning:aubio_beatcheck.*:",
    "error::DeprecationWarning:web_api.*:",
    "error::DeprecationWarning:tests.*:",
    # Third-party warnings we cannot fix (issues in litestar/pydantic packages)
    # litestar uses deprecated asyncio.iscoroutinefunction - fixed in future versions
    "ignore:.*iscoroutinefunction.*:DeprecationWarning",
    # pydantic v1 compatibility layer warning on Python 3.14+
    "ignore:.*Pydantic V1.*:UserWarning",
]
